--- a/chess/index.html
+++ b/chess/index.html
@@ -146,6 +146,22 @@
                 </div>
             </div>
 
+            <!-- High Scores Table -->
+            <div class="high-scores-container">
+                <h3 id="high-scores-title">High Scores</h3>
+                <table id="high-scores-table">
+                    <thead><tr>
+                        <th id="th-rank">Rank</th>
+                        <th id="th-moves">Moves</th>
+                        <th id="th-time">Time</th>
+                        <th id="th-date">Date</th>
+                    </tr></thead>
+                    <tbody id="high-scores-body">
+                        <!-- High scores will be rendered here -->
+                    </tbody>
+                </table>
+            </div>
+
             <button id="restart-btn" class="primary">Play Again</button>
         </div>
     </div>
