--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -77,20 +77,18 @@
         <!-- Menu View -->
         <div id="menu-view" class="card animate-fade-in">
             <h2 id="menu-title">Game Setup</h2>
-            <div class="menu-options">
-                <div class="option-group">
-                    <label id="label-difficulty">Difficulty</label>
-                    <div class="difficulty-selector">
-                        <button class="diff-btn active" data-diff="BEGINNER">Beginner</button>
-                        <button class="diff-btn" data-diff="EASY">Easy</button>
-                        <button class="diff-btn" data-diff="MEDIUM">Medium</button>
-                        <button class="diff-btn" data-diff="HARD">Hard</button>
-                        <button class="diff-btn" data-diff="EXPERT">Expert</button>
-                    </div>
+            <div class="setup-group">
+                <h3 id="label-difficulty">Board Size</h3>
+                <div class="radio-group">
+                    <button class="diff-btn active" data-diff="BEGINNER">Beginner</button>
+                    <button class="diff-btn" data-diff="EASY">Easy</button>
+                    <button class="diff-btn" data-diff="MEDIUM">Medium</button>
+                    <button class="diff-btn" data-diff="HARD">Hard</button>
+                    <button class="diff-btn" data-diff="EXPERT">Expert</button>
                 </div>
-
-                <button id="start-btn" class="primary">Start Game</button>
             </div>
+
+            <button id="start-btn" class="primary">Start Game</button>
         </div>
 
         <!-- Game View -->
