--- a/sliding/index.html
+++ b/sliding/index.html
@@ -75,20 +75,18 @@
         <!-- Menu View -->
         <div id="menu-view" class="card animate-fade-in">
             <h2 id="menu-title">Game Setup</h2>
-            <div class="menu-options">
-                <div class="option-group">
-                    <label id="label-board-size">Board Size</label>
-                    <div class="size-selector">
-                        <button class="size-btn active" data-size="3">3 × 3</button>
-                        <button class="size-btn" data-size="4">4 × 4</button>
-                        <button class="size-btn" data-size="5">5 × 5</button>
-                        <button class="size-btn" data-size="6">6 × 6</button>
-                        <button class="size-btn" data-size="7">7 × 7</button>
-                    </div>
+            <div class="setup-group">
+                <h3 id="label-board-size">Board Size</h3>
+                <div class="size-selector">
+                    <button class="size-btn active" data-size="3">3 × 3</button>
+                    <button class="size-btn" data-size="4">4 × 4</button>
+                    <button class="size-btn" data-size="5">5 × 5</button>
+                    <button class="size-btn" data-size="6">6 × 6</button>
+                    <button class="size-btn" data-size="7">7 × 7</button>
                 </div>
-
-                <button id="start-btn" class="primary">Start Game</button>
             </div>
+
+            <button id="start-btn" class="primary">Start Game</button>
         </div>
 
         <!-- Game View -->
